# NadSafe-Password-Manager

./: .gitignore  Cargo.toml  NadSafe-Password-Manager-PRD.md  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json
.claude/: launch.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
caddy/: Caddyfile
clients/desktop/src-tauri/: Cargo.toml  tauri.conf.json
clients/desktop/src-tauri/capabilities/: default.json
clients/desktop/src-tauri/icons/: icon.icns
clients/desktop/src-tauri/src/: lib.rs  main.rs  tray.rs
clients/desktop/src-tauri/src/commands/: vault.rs
clients/extension/: manifest.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
clients/extension/src/background/: background.js
clients/extension/src/content/: content.js
clients/extension/src/lib/: fuzzy.test.ts  fuzzy.ts  vault-crypto.ts
clients/extension/src/popup/: popup.css  popup.html  popup.tsx
clients/web/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
clients/web/src/: App.tsx  main.tsx
clients/web/src/components/: ItemModal.module.css  ItemModal.tsx  Layout.module.css  Layout.tsx  NadSafeLogo.tsx  PasswordGenerator.module.css  PasswordGenerator.tsx  PinInput.tsx  PinSetup.tsx  ShowRecoveryPhrase.module.css  ShowRecoveryPhrase.tsx  Sidebar.module.css  Sidebar.tsx  TotpDisplay.module.css  TotpDisplay.tsx
clients/web/src/hooks/: useAuth.test.tsx  useAuth.ts  useExtensionAutoPush.ts  useFolders.ts  useOrg.ts  useTauriAutoLock.ts  useVaultSync.ts  useVaultTimeout.test.ts  useVaultTimeout.ts
clients/web/src/lib/: cross-tab-session.ts  export.test.ts  export.ts  extension-bridge.ts  extension-save.ts  import.test.ts  import.ts  importers.test.ts  importers.ts  password-gen.test.ts  password-gen.ts  password-strength.test.ts  password-strength.ts  platform.ts  rateLimit.test.ts  rateLimit.ts  totp.test.ts  totp.ts
clients/web/src/lib/api/: account.ts  auth.ts  client.ts  folders.ts  index.ts  orgs.ts  types.ts  vault.ts
clients/web/src/lib/crypto/: enc-string.test.ts  enc-string.ts  index.ts  kdf.test.ts  kdf.ts  key-hierarchy.test.ts  key-hierarchy.ts  pin.test.ts  pin.ts  recovery.test.ts  recovery.ts  rsa.test.ts  rsa.ts  types.test.ts  types.ts  utils.test.ts  utils.ts
clients/web/src/pages/: AcceptInvitePage.tsx  Auth.module.css  Import.module.css  ImportPage.tsx  LoginPage.tsx  Organizations.module.css  OrganizationsPage.tsx  RecoveryPhrase.module.css  RecoveryPhrasePage.tsx  RegisterPage.tsx  Settings.module.css  SettingsPage.tsx  TotpSetup.module.css  TotpSetupPage.tsx  UnlockPage.tsx  VaultPage.module.css  VaultPage.tsx
clients/web/src/pages/org/: Org.module.css  OrgAuditLog.tsx  OrgCollections.tsx  OrgDashboard.tsx  OrgGroups.tsx  OrgMembers.tsx  OrgPolicies.tsx
clients/web/src/stores/: auth.ts  lock.ts  session.test.ts  session.ts  vault.test.ts  vault.ts
clients/web/src/styles/: global.css
clients/web/src/test/: setup.ts
crates/crypto-core/: Cargo.toml
crates/crypto-core/src/: enc_string.rs  error.rs  kdf.rs  keys.rs  lib.rs  password_gen.rs  recovery.rs  totp.rs
crates/crypto-core/tests/: bitwarden_vectors.rs
docs/: threat-model.md
server/: NADSAFE.md
server/src/: auth.rs  error.rs  mail.rs  sso.rs  util.rs
server/src/api/: admin.rs  identity.rs
server/src/api/core/: sends.rs
server/src/db/models/: attachment.rs  device.rs
