[workspace]
resolver = "2"
members = [
    "crates/crypto-core",
    "clients/desktop/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Nadir <nadir.akbarov.95@gmail.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/nadir/nadsafe"

[workspace.dependencies]
# Crypto
argon2 = { version = "0.5", features = ["std"] }
pbkdf2 = { version = "0.12", features = ["hmac"] }
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
hkdf = "0.12"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
rsa = { version = "0.9", features = ["sha2"] }
rand = "0.8"
base64 = "0.22"
zeroize = { version = "1.8", features = ["derive"] }
secrecy = { version = "0.8", features = ["serde"] }
bip39 = "2.0"
getrandom = { version = "0.2", features = ["js"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Async
tokio = { version = "1", features = ["full"] }

# Tauri
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
