[package]
name = "nadsafe-crypto-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "NadSafe shared crypto core — key hierarchy, EncString, KDF. Compiles to native and WASM."

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = ["getrandom/js"]

[dependencies]
argon2.workspace = true
pbkdf2.workspace = true
hmac.workspace = true
sha1.workspace = true
sha2.workspace = true
hkdf.workspace = true
aes.workspace = true
cbc.workspace = true
rsa.workspace = true
rand.workspace = true
base64.workspace = true
zeroize.workspace = true
secrecy.workspace = true
getrandom.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
hex-literal = "0.4"
hex = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
